--- a/profile/themes/smc_base/scss/elements/teaser.scss
+++ b/profile/themes/smc_base/scss/elements/teaser.scss
@@ -14,7 +14,7 @@
   border-top: 1px solid rgba($primaryBlue, .1); 
   padding: 1.5em 0;
   margin-bottom: 40px;
-  
+  position: relative;
   
   .node-url {
     display: none;
